# RustASR

./: Cargo.toml
crates/asr-cli/: Cargo.toml
crates/asr-cli/src/: main.rs  speaker.rs  vad.rs
crates/asr-core/src/: metal_utils.rs
crates/asr-engine/src/: engine.rs
crates/asr-pipeline/src/: pipeline.rs  tokenizer.rs
crates/audio/src/: mel.rs  resample.rs
crates/aut-encoder/src/: layers.rs
crates/aut-encoder/tests/: load_encoder.rs
crates/model-gigaam/src/: conformer.rs  ctc.rs  mel.rs  model.rs
crates/model-parakeet/src/: decoder.rs  encoder.rs  joint.rs  mel.rs  model.rs  tdt.rs
crates/model-qwen3/src/: model.rs
crates/model-whisper/src/: decoder.rs  model.rs
crates/qwen3-decoder/src/: layers.rs
scripts/: download_model.py
