[package]
name = "asr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rustasr"
path = "src/main.rs"

[dependencies]
asr-core.workspace = true
audio.workspace = true
aut-encoder.workspace = true
qwen3-decoder.workspace = true
asr-pipeline = { path = "../asr-pipeline" }
asr-engine = { path = "../asr-engine" }
model-whisper = { path = "../model-whisper" }
model-gigaam = { path = "../model-gigaam" }
model-parakeet = { path = "../model-parakeet" }
candle-core.workspace = true
cudarc.workspace = true
tokenizers.workspace = true
clap.workspace = true
indicatif.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webrtc-vad.workspace = true
serde.workspace = true
serde_json.workspace = true
